--- a/card_html.html
+++ b/card_html.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="card_css.css">
   </head>
   <body>
+    <div></div>
     <div class="header">
       <div class="img_box"><img src="百鬼夜刑.png" class="img"></div>
     </div>
