--- a/card_html.html
+++ b/card_html.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="card_css.css">
   </head>
   <body>
-    <div></div>
     <div class="header">
       <div class="img_box"><img src="百鬼夜刑.png" class="img"></div>
     </div>
@@ -18,7 +17,9 @@
           <div class="col-3">
             <div class="input-group mb-3">
               <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">Default</span>
+                <span class="input-group-text" id="inputGroup-sizing-default">
+                  <img src="search.png" width="20px">
+                </span>
               </div>
               <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
             </div>
