--- a/card_html.html
+++ b/card_html.html
@@ -54,9 +54,10 @@
   <div class="row">
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-left">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true"><img src="left.png" width="50px" height="50px"></span>
+        <div class="modal-content">
+          <div class="modal-prev">
+            <button type="button" class="close btn">
+              <img src="prev.png" width="50px" height="50px">
             </button>
           </div>
           <div class="modal-body">
@@ -64,14 +65,20 @@
               <div class="col-sm">
                 <img class="card-img" src="鬼怪\鬼.png">
               </div>
-              <div class="col-sm" id="card-title">
+              <div class="col-sm" id="card-content">
                 <h3>鬼怪牌</h3>
+                <hr>
+                <img id="team-img"></img>
+                <br><br>
+                <p>鬼怪牌</p>
               </div>
             </div>
           </div>
-          <div class="modal-right">
-            <button type="button" class="close" data-dismiss="modal"><img src="right.png" width="50px" height="50px"></button>
+          <div class="modal-next">
+            <button type="button" class="close btn"><img src="next.png" width="50px" height="50px"></button>
+          </div>
         </div>
+
       </div>
     </div>
     <!-- <div class="col-sm">
