--- a/card_html.html
+++ b/card_html.html
@@ -37,8 +37,8 @@
           <div class="col-3>
       <div class="btn-group" role="group" aria-label="Basic example">
         檢視：
-        <button type="button" class="btn-secondary active" id="picture-btn">Left</button>
-        <button type="button" class="btn-secondary" id="list-btn">Right</button>
+        <button type="button" class="btn-secondary active" id="picture-btn"><img src="picture.png" class="btn-img"></button>
+        <button type="button" class="btn-secondary" id="list-btn"><img src="form.png" class="btn-img"></button>
         </div>
       </div>
       </div>
@@ -97,8 +97,8 @@
         <th scope="col">團隊任務</th>
         <th scope="col">重複</th>
         <th scope="col">順序</th>
-        <th scope="col">團隊審判</th>
         <th scope="col">個人任務屬性</th>
+        <th scope="col">個人任務審判</th>
       </tr>
     </thead>
       <tbody id="list-body"></tbody>
